# py-se-framework

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: config.yaml
scripts/: check_browser.py
src/ai_web_framework/: __init__.py
src/ai_web_framework/ai/: __init__.py  failure_analyzer.py  locator_healer.py  openai_client.py
src/ai_web_framework/core/: driver_factory.py  settings.py
src/ai_web_framework/pages/: base_page.py  shop_page.py
src/selenium_ai_web_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/e2e/: test_shop.py
tests/resources/: sample_shop.html
tests/unit/: test_healing_record.py  test_settings.py
